2009-02-23  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Dialog_Partition_New.cc,
	  src/DialogFeatures.cc,
	  src/GParted_Core.cc,
	  src/Utils.cc,
	  src/Win_GParted.cc: Added detection of btrfs file system.
	  - Thanks to Luca Bruno for the original btrfs patch that I adapted.
	  - Related to GParted bug #571170

2009-02-20  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Fixed compiler warning regarding parentheses.

2009-02-18  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Dialog_Partition_New.cc,
	  src/DialogFeatures.cc,
	  src/GParted_Core.cc,
	  src/Utils.cc,
	  src/Win_GParted.cc: Added detection of LUKS encrypted partitions.
	  - Closes GParted bug #490740

2009-02-16  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Base_Partition.cc,
	  src/GParted_Core.cc: Enhanced move/resize functionality.
	  - Only move start sector if dialog space before value is changed.
	  - Closes GParted bug #571151

	* include/Partition.h,
	  src/Partition.cc: Added strict_start indicator.

2009-02-13  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Append -svn to version for continuing development

2009-02-12  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.4.3
	  ===================================================

2009-02-11  Curtis Gedak  <gedakc@gmail.com>

	* gparted.in: Fixed typo of "freedeskdesktop" in hal-lock name.
	  - Thanks to Alain Kalker for discovering this mistake.
	  - Thanks to Jonas Pedersen for reporting this mistake upstream.
	  - Closes GParted bug #571347

2009-02-09  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.cc: Fixed crash on startup with Russian language.
	  - Thanks to Dmitriy Motitskiy for small patch.
	  - Closes GParted bug #570855

	* README: Added note blkid is used for ext4 detection.

2009-02-06  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Append -svn to version for continuing development

2009-02-05  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.4.2