@@ -1,3 +1,8 @@
+2009-02-25  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc: Added recognition of /dev/mmcblk* SD/MMC devices.
+	  - Closes GParted bug #564985
+
 2009-02-23  Curtis Gedak  <gedakc@gmail.com>
 
 	* include/Utils.h,
